tests/references/ill-typed/unexpected-type-for-expression-3.stella
language core;

extend with #unit-type, #references, #sequencing;

fn inc_ref(ref : &Nat) -> Unit {
  return
    ref := succ(*ref)
}

fn inc3(ref : &Nat) -> Nat {
  return
    inc_ref(ref);
    inc_ref(*ref);
    inc_ref(ref);
    *ref
}

fn main(n : Nat) -> Nat {
  return inc3(new(n))
}
